[package]
name = "docpact"
version = "0.1.8"
edition = "2024"
description = "Deterministic documentation governance CLI for AI-assisted software teams."
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/docpact"
keywords = ["documentation", "governance", "lint", "cli", "agent"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/assets"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.4"
